# cli-memory

./: .env.web  .gitattributes  .gitignore  CHANGELOG.md  DEPENDENCIES.md  LICENSE  build-web-release.sh  components.json  deplink.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prebuild-deps.sh  start-web.sh  stop-web.sh  tailwind.config.cjs  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  doc_issue.yml  feature_request.yml  question.yml
.github/prompts/: opsx-apply.prompt.md  opsx-archive.prompt.md  opsx-bootstrap.prompt.md  opsx-explore.prompt.md  opsx-propose.prompt.md
.github/workflows/: build-web-release.yml  ci.yml  release.yml  stale.yml
.serena/: project.yml
.serena/memories/: project_overview.md  suggested_commands.md  task_completion.md
crates/core/: Cargo.toml
crates/core/src/: claude_auth.rs  lib.rs  terminal_launcher.rs
crates/core/tests/: import_config_from_sql.rs
crates/server/: Cargo.toml  build.rs
crates/server/src/: auth.rs  events.rs  lib.rs  main.rs  state.rs
crates/server/src/api/: dispatch.rs  invoke.rs  mod.rs  session_auth.rs  sql_export.rs  sql_import.rs  ws.rs
crates/server/src/rpc/: error.rs  mod.rs  request.rs  response.rs
crates/server/tests/: sql_export_download.rs  sql_import_upload.rs  tauri_rpc_consistency.rs
docs/: WEBSOCKET_JSONRPC_ARCHITECTURE.md  sft-data-format-spec.md  ui-usage-todo.md
docs/release-notes/: v3.12.0-en.md  v3.12.0-ja.md  v3.12.0-zh.md
docs/user-manual/: README.md
flatpak/: README.md  com.ccswitch.desktop.desktop  com.ccswitch.desktop.metainfo.xml  com.ccswitch.desktop.yml
openspec/: README.md  config.yaml  project.opsx.code-map.yaml  project.opsx.relations.yaml  project.opsx.yaml
openspec/specs/: README.md
scripts/: extract-icons.js  filter-icons.js  release-manager.mjs  web-release-smoke.mjs
src/: App.tsx  index.css  index.html  main.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  common-controls.manifest  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_config.rs  app_store.rs  auto_launch.rs  claude_mcp.rs  claude_plugin.rs  codex_config.rs  config.rs  error.rs  gemini_config.rs  gemini_mcp.rs  import_export_support.rs  init_status.rs  lib.rs  lightweight.rs  linux_fix.rs  main.rs  openclaw_config.rs  opencode_config.rs  panic_hook.rs  prompt.rs  prompt_files.rs  provider.rs  provider_defaults.rs  settings.rs  store.rs  tray.rs  ui_runtime.rs  usage_script.rs
src-tauri/src/commands/: auth.rs  balance.rs  codex_oauth.rs  coding_plan.rs  config.rs  copilot.rs  deeplink.rs  env.rs  global_proxy.rs  import_export.rs  lightweight.rs  mcp.rs  misc.rs  mod.rs  model_fetch.rs  omo.rs  openclaw.rs  plugin.rs  prompt.rs  provider.rs  session_manager.rs  settings.rs  skill.rs  stream_check.rs  subscription.rs  sync_support.rs  usage.rs  webdav_sync.rs  workspace.rs
src-tauri/src/database/: backup.rs  migration.rs  mod.rs  schema.rs  tests.rs
src-tauri/src/database/dao/: failover.rs  mcp.rs  mod.rs  prompts.rs  providers.rs  providers_seed.rs  proxy.rs  settings.rs  skills.rs  stream_check.rs  universal_providers.rs  usage_rollup.rs
src-tauri/src/deeplink/: mcp.rs  mod.rs  parser.rs  prompt.rs  provider.rs  skill.rs  tests.rs  utils.rs
src-tauri/src/mcp/: claude.rs  codex.rs  gemini.rs  mod.rs  opencode.rs  validation.rs
src-tauri/src/proxy/: body_filter.rs  cache_injector.rs  circuit_breaker.rs  copilot_optimizer.rs  error.rs  error_mapper.rs  failover_switch.rs  forwarder.rs  handler_config.rs  handler_context.rs  handlers.rs  health.rs  http_client.rs  hyper_client.rs  log_codes.rs  mod.rs  model_mapper.rs  provider_router.rs  response_handler.rs  response_processor.rs  server.rs  session.rs  sse.rs  switch_lock.rs  thinking_budget_rectifier.rs  thinking_optimizer.rs  thinking_rectifier.rs  types.rs
src-tauri/src/proxy/providers/: adapter.rs  auth.rs  claude.rs  codex.rs  codex_oauth_auth.rs  copilot_auth.rs  copilot_headers.rs  gemini.rs  mod.rs  streaming.rs  streaming_responses.rs  transform.rs  transform_responses.rs
src-tauri/src/proxy/providers/models/: anthropic.rs  mod.rs  openai.rs
src-tauri/src/proxy/usage/: calculator.rs  logger.rs  mod.rs  parser.rs
src-tauri/src/services/: balance.rs  coding_plan.rs  config.rs  env_checker.rs  env_manager.rs  mcp.rs  mod.rs  model_fetch.rs  omo.rs  prompt.rs  proxy.rs  session_usage.rs  session_usage_codex.rs  session_usage_gemini.rs  skill.rs  speedtest.rs  stream_check.rs  subscription.rs  usage_stats.rs  webdav.rs  webdav_auto_sync.rs  webdav_sync.rs
src-tauri/src/services/provider/: endpoints.rs  gemini_auth.rs  live.rs  mod.rs  usage.rs
src-tauri/src/services/webdav_sync/: archive.rs
src-tauri/src/session_manager/: mod.rs
src-tauri/src/session_manager/providers/: claude.rs  codex.rs  gemini.rs  mod.rs  openclaw.rs  opencode.rs  utils.rs
src-tauri/src/session_manager/terminal/: mod.rs
src-tauri/tests/: app_config_load.rs  app_type_parse.rs  deeplink_import.rs  import_export_sync.rs  mcp_commands.rs  provider_commands.rs  provider_service.rs  proxy_commands.rs  skill_sync.rs  support.rs
src-tauri/wix/: per-user-main.wxs
src/components/: AppCrashBoundary.tsx  AppSwitcher.tsx  BrandIcons.tsx  ConfirmDialog.tsx  JsonEditor.tsx  LoginPage.tsx  MarkdownEditor.tsx  ProviderIcon.tsx  theme-provider.tsx
src/config/: appConfig.tsx  constants.ts  mcpPresets.ts
src/contexts/: AuthContext.tsx
src/hooks/: useMcp.ts  usePromptActions.ts  useSessionSearch.ts  useSkills.ts
src/i18n/: index.ts
src/lib/: platform-paths.impl.d.ts  platform-paths.tauri.ts  platform-paths.ts  platform-paths.web.ts  platform.ts
src/platform/: bootstrap.d.ts  (+2 more)
tests/: setupGlobals.ts  setupTests.ts
(+173 files in other folders)
