[package]
name = "cli-memory"
version = "3.13.0"
description = "All-in-One Assistant for Claude Code, Codex & Gemini CLI"
authors = ["Jason Young"]
license = "MIT"
repository = "https://github.com/farion1231/cli-memory"
edition = "2021"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cli_memory_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
doctest = false

[features]
default = ["desktop"]
desktop = [
  "dep:tauri",
  "dep:tauri-plugin-log",
  "dep:tauri-plugin-opener",
  "dep:tauri-plugin-process",
  "dep:tauri-plugin-updater",
  "dep:tauri-plugin-dialog",
  "dep:tauri-plugin-store",
  "dep:tauri-plugin-deep-link",
  "dep:tauri-plugin-single-instance",
  "dep:webkit2gtk",
]
headless = []
test-hooks = []

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tauri = { version = "2.11.0", features = ["tray-icon", "protocol-asset", "image-png"], optional = true }
tauri-plugin-log = { version = "2", optional = true }
tauri-plugin-opener = { version = "2", optional = true }
tauri-plugin-process = { version = "2", optional = true }
tauri-plugin-updater = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-store = { version = "2", optional = true }
tauri-plugin-deep-link = { version = "2", optional = true }
dirs = "6.0"
toml = "1.1"
toml_edit = "0.25"
reqwest = { version = "0.12", features = ["rustls-tls", "json", "stream", "socks"] }
arboard = "3.6"
flate2 = "1"
brotli = "8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
futures = "0.3"
async-stream = "0.3"
bytes = "1.5"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
hyper = { version = "1.9", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "http1", "client-legacy"] }
hyper-rustls = { version = "0.27", features = ["http1", "tls12", "ring", "webpki-tokio"] }
http = "1"
http-body = "1"
http-body-util = "0.1"
httparse = "1"
tokio-rustls = "0.26"
rustls = "0.23"
webpki-roots = "1.0"
rustls-native-certs = "0.8"
regex = "1.10"
rquickjs = { version = "0.11", features = ["array-buffer", "classes"] }
thiserror = "2.0"
anyhow = "1.0"
zip = "4.6"
serde_yaml = "0.9"
tempfile = "3"
url = "2.5"
auto-launch = "0.6"
once_cell = "1.21.4"
base64 = "0.22"
rusqlite = { version = "0.39", features = ["bundled", "backup", "hooks"] }
indexmap = { version = "2", features = ["serde"] }
rust_decimal = "1.41"
uuid = { version = "1.23", features = ["v4"] }
sha2 = "0.11"
json5 = "1.3"
json-five = "0.3.1"

[[bin]]
name = "cli-memory"
path = "src/main.rs"
required-features = ["desktop"]

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = { version = "2", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = { version = "2.0.1", features = ["v2_16"], optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSColor"] }

# Optimize release binary size to help reduce AppImage footprint
[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
# 使用 unwind 以便 panic hook 能捕获 backtrace（abort 会直接终止无法捕获）
panic = "unwind"
strip = "symbols"

[dev-dependencies]
serial_test = "3"
tempfile = "3"
