[package]
name = "cli-memory-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Reuse src-tauri shared logic in headless mode only
cli_memory = { path = "../../src-tauri", package = "cli-memory", default-features = false, features = ["headless"] }
indexmap = { version = "2", features = ["serde"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"
