[package]
name = "cli-memory-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cli-memory"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart", "ws"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
rust-embed = { version = "8", features = ["axum"] }
mime_guess = "2"
rustls = "0.23"

# 共享核心逻辑库
cli-memory-core = { path = "../core" }

# Auth dependencies
bcrypt = "0.15"
rand = "0.8"
hex = "0.4"
dirs = "5"

[dev-dependencies]
cli_memory = { path = "../../src-tauri", package = "cli-memory", default-features = false, features = ["headless"] }
tower = { version = "0.5", features = ["util"] }

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
panic = "unwind"
strip = "symbols"
